tests/conformance/negative/bad_macro_recursion.afr
macro outer(x)
    inner!(x)
end
macro inner(y)
    say y
end
outer!("hi")
